urls point to project github page

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ctx-core/ctx-core.git"
+		"url": "https://github.com/ctx-core/tradingview/issues"
 	},
 	"keywords": [
 		"ctx-core",
@@ -18,9 +18,9 @@
 	"author": "Brian Takita",
 	"license": "Apache-2.0",
 	"bugs": {
-		"url": "https://github.com/ctx-core/ctx-core/issues"
+		"url": "https://github.com/ctx-core/tradingview/issues"
 	},
-	"homepage": "https://github.com/ctx-core/ctx-core#readme",
+	"homepage": "https://github.com/ctx-core/tradingview#readme",
 	"publishConfig": {
 		"access": "public"
 	},
