--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@ctx-core/tradingview",
 	"version": "5.0.238",
 	"description": "ctx-core tradingview svelte library",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
