--- a/package.json
+++ b/package.json
@@ -2,35 +2,35 @@
 	"name": "@ctx-core/tradingview",
 	"version": "5.0.323",
 	"description": "ctx-core tradingview svelte library",
-	"scripts": {
-		"exec": "$@"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ctx-core/tradingview/issues"
-	},
 	"keywords": [
 		"ctx-core",
 		"tradingview",
 		"svelte",
 		"component"
 	],
-	"author": "Brian Takita",
-	"license": "Apache-2.0",
+	"homepage": "https://github.com/ctx-core/tradingview#readme",
 	"bugs": {
 		"url": "https://github.com/ctx-core/tradingview/issues"
 	},
-	"homepage": "https://github.com/ctx-core/tradingview#readme",
-	"publishConfig": {
-		"access": "public"
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ctx-core/tradingview/issues"
+	},
+	"license": "Apache-2.0",
+	"author": "Brian Takita",
+	"scripts": {
+		"exec": "$@"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "^17.0.4",
-		"@ctx-core/dom": "^6.0.34",
-		"@ctx-core/object": "^10.0.4",
-		"@ctx-core/uri": "^7.2.4",
-		"@ctx-core/uuid": "^3.1.33",
+		"@ctx-core/array": "workspace:*",
+		"@ctx-core/dom": "workspace:*",
+		"@ctx-core/object": "workspace:*",
+		"@ctx-core/uri": "workspace:*",
+		"@ctx-core/uuid": "workspace:*",
 		"svelte": "^3.25.0"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"gitHead": "3d5dcfe897f9bf575ce28475b715ccfee4128e59"
 }
