--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"@ctx-core/object": "workspace:*",
 		"@ctx-core/uri": "workspace:*",
 		"@ctx-core/uuid": "workspace:*",
-		"svelte": "~3.25.1"
+		"svelte": "~3.25.1",
+		"typescript": "^4.0.3"
 	},
 	"publishConfig": {
 		"access": "public"
