--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "5.0.325",
+	"version": "5.0.326",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -24,11 +24,11 @@
 	},
 	"devDependencies": {
 		"@ctx-core/array": "workspace:^19.0.7",
-		"@ctx-core/dom": "workspace:^7.0.11",
+		"@ctx-core/dom": "workspace:^7.0.12",
 		"@ctx-core/object": "workspace:^12.0.3",
 		"@ctx-core/uri": "workspace:^8.0.0",
 		"@ctx-core/uuid": "workspace:^4.0.0",
-		"svelte": "~3.25.1",
+		"svelte": "3.26.0",
 		"typescript": "^4.0.3"
 	},
 	"publishConfig": {
