--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "5.0.348",
+	"version": "6.0.0",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -22,12 +22,15 @@
 		"build": "npm run compile",
 		"exec": "$@"
 	},
+	"main": "./src/index.js",
+	"module": "./src/index.js",
+	"types": "./src/index.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^19.2.5",
-		"@ctx-core/dom": "workspace:^7.1.52",
-		"@ctx-core/object": "workspace:^16.1.1",
-		"@ctx-core/uri": "workspace:^8.1.30",
-		"@ctx-core/uuid": "workspace:^4.1.0",
+		"@ctx-core/array": "workspace:^20.0.0",
+		"@ctx-core/dom": "workspace:^8.0.0",
+		"@ctx-core/object": "workspace:^17.0.0",
+		"@ctx-core/uri": "workspace:^9.0.0",
+		"@ctx-core/uuid": "workspace:^5.0.0",
 		"svelte": "3.32.1",
 		"typescript": "^4.1.3"
 	},
