--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "6.0.10",
+	"version": "6.0.11",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -26,15 +26,16 @@
 	"module": "./src/index.js",
 	"types": "./src/index.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^20.2.1",
-		"@ctx-core/dom": "workspace:^8.2.13",
-		"@ctx-core/object": "workspace:^17.4.1",
-		"@ctx-core/uri": "workspace:^9.1.11",
-		"@ctx-core/uuid": "workspace:^5.0.6",
+		"@ctx-core/array": "workspace:^20.2.2",
+		"@ctx-core/dom": "workspace:^8.2.14",
+		"@ctx-core/object": "workspace:^17.4.2",
+		"@ctx-core/uri": "workspace:^9.1.12",
+		"@ctx-core/uuid": "workspace:^5.0.7",
 		"svelte": "3.35.0",
 		"typescript": "^4.2.3"
 	},
 	"publishConfig": {
-		"access": "public"
+		"access": "public",
+		"cache": "~/.npm"
 	}
 }
