--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "6.0.44",
+	"version": "6.0.45",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -24,13 +24,13 @@
 	},
 	"main": "./src/index.js",
 	"module": "./src/index.js",
-	"types": "./src/index.ts",
+	"types": "./src/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^20.3.9",
-		"@ctx-core/dom": "workspace:^8.3.9",
-		"@ctx-core/object": "workspace:^18.0.5",
-		"@ctx-core/uri": "workspace:^9.2.9",
-		"@ctx-core/uuid": "workspace:^5.1.2",
+		"@ctx-core/array": "workspace:^20.3.10",
+		"@ctx-core/dom": "workspace:^8.3.10",
+		"@ctx-core/object": "workspace:^18.0.6",
+		"@ctx-core/uri": "workspace:^9.2.10",
+		"@ctx-core/uuid": "workspace:^5.1.3",
 		"svelte": "3.38.2",
 		"typescript": "^4.2.4"
 	},
