--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "6.0.45",
+	"version": "6.1.0",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -22,15 +22,15 @@
 		"build": "npm run compile",
 		"exec": "$@"
 	},
-	"main": "./src/index.js",
-	"module": "./src/index.js",
-	"types": "./src/index.d.ts",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./types/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^20.3.10",
-		"@ctx-core/dom": "workspace:^8.3.10",
-		"@ctx-core/object": "workspace:^18.0.6",
-		"@ctx-core/uri": "workspace:^9.2.10",
-		"@ctx-core/uuid": "workspace:^5.1.3",
+		"@ctx-core/array": "workspace:^20.4.0",
+		"@ctx-core/dom": "workspace:^8.4.0",
+		"@ctx-core/object": "workspace:^18.1.0",
+		"@ctx-core/uri": "workspace:^9.3.0",
+		"@ctx-core/uuid": "workspace:^5.2.0",
 		"svelte": "3.38.2",
 		"typescript": "^4.2.4"
 	},
