--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "6.1.2",
+	"version": "6.2.0",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,18 +19,22 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"scripts": {
-		"build": "npm run compile",
+		"build": "npm run clean && npm run compile && npm run symlink",
+		"clean": "rm -f tsconfig.tsbuildinfo",
+		"compile": "./node_modules/.bin/tsc -b .",
+		"symlink": "./node_modules/.bin/symlink_src_assets_to_dist .",
 		"exec": "$@"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
-	"types": "./types/index.d.ts",
+	"types": "./dist/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^20.4.2",
-		"@ctx-core/dom": "workspace:^8.4.1",
-		"@ctx-core/object": "workspace:^18.1.1",
-		"@ctx-core/uri": "workspace:^9.3.1",
-		"@ctx-core/uuid": "workspace:^5.2.1",
+		"@ctx-core/array": "workspace:^20.5.0",
+		"@ctx-core/ctx-core-package-tools": "workspace:^6.4.0",
+		"@ctx-core/dom": "workspace:^8.5.0",
+		"@ctx-core/object": "workspace:^18.2.0",
+		"@ctx-core/uri": "workspace:^9.4.0",
+		"@ctx-core/uuid": "workspace:^5.3.0",
 		"svelte": "3.38.2",
 		"typescript": "^4.2.4"
 	},
