--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "7.0.13",
+	"version": "7.0.14",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -20,7 +20,7 @@
 	"author": "Brian Takita",
 	"scripts": {
 		"build": "npm run clean && npm run compile && npm run symlink",
-		"clean": "rm -f tsconfig.tsbuildinfo",
+		"clean": "rm -f tsconfig.tsbuildinfo && rm -f dist/**/*.js && rm -f dist/**/*.d.ts && rm -f dist/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
 		"symlink": "./node_modules/.bin/symlink_src_assets_to_dist .",
 		"exec": "$@"
@@ -29,12 +29,12 @@
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^21.2.5",
-		"@ctx-core/ctx-core-package-tools": "workspace:^7.0.12",
-		"@ctx-core/dom": "workspace:^9.0.8",
-		"@ctx-core/object": "workspace:^19.1.1",
-		"@ctx-core/uri": "workspace:^10.0.2",
-		"@ctx-core/uuid": "workspace:^6.0.0",
+		"@ctx-core/array": "workspace:^21.2.6",
+		"@ctx-core/ctx-core-package-tools": "workspace:^7.0.13",
+		"@ctx-core/dom": "workspace:^9.0.9",
+		"@ctx-core/object": "workspace:^19.1.2",
+		"@ctx-core/uri": "workspace:^10.0.3",
+		"@ctx-core/uuid": "workspace:^6.0.1",
 		"svelte": "3.38.2",
 		"typescript": "^4.3.2"
 	},
