--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "7.0.23",
+	"version": "8.0.0",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -25,16 +25,16 @@
 		"symlink": "./node_modules/.bin/symlink_src_assets_to_dist .",
 		"exec": "$@"
 	},
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "./src/index.js",
+	"module": "./src/index.js",
+	"types": "./src/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^21.3.3",
-		"@ctx-core/ctx-core-package-tools": "workspace:^7.0.20",
-		"@ctx-core/dom": "workspace:^9.0.15",
-		"@ctx-core/object": "workspace:^19.3.0",
-		"@ctx-core/uri": "workspace:^10.0.7",
-		"@ctx-core/uuid": "workspace:^6.0.2",
+		"@ctx-core/array": "workspace:^22.0.0",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.0",
+		"@ctx-core/dom": "workspace:^10.0.0",
+		"@ctx-core/object": "workspace:^20.0.0",
+		"@ctx-core/uri": "workspace:^11.0.0",
+		"@ctx-core/uuid": "workspace:^7.0.0",
 		"svelte": "3.38.2",
 		"typescript": "^4.3.2"
 	},
