--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "8.0.6",
+	"version": "8.0.7",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -20,7 +20,7 @@
 	"author": "Brian Takita",
 	"scripts": {
 		"build": "npm run clean && npm run compile",
-		"clean": "rm -f tsconfig.tsbuildinfo && rm -f dist/**/*.js && rm -f dist/**/*.d.ts && rm -f dist/**/*.map",
+		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
 		"exec": "$@"
 	},
@@ -28,12 +28,12 @@
 	"module": "./src/index.js",
 	"types": "./src/index.d.ts",
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^22.0.4",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.5",
-		"@ctx-core/dom": "workspace:^10.0.3",
-		"@ctx-core/object": "workspace:^20.0.3",
-		"@ctx-core/uri": "workspace:^11.0.2",
-		"@ctx-core/uuid": "workspace:^7.0.2",
+		"@ctx-core/array": "workspace:^22.0.5",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.6",
+		"@ctx-core/dom": "workspace:^10.0.4",
+		"@ctx-core/object": "workspace:^20.0.4",
+		"@ctx-core/uri": "workspace:^11.0.3",
+		"@ctx-core/uuid": "workspace:^7.0.3",
 		"svelte": "3.38.2",
 		"typescript": "^4.3.4"
 	},
