--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
+	"type": "module",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "npm run clean && npm run copy-components && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
@@ -26,9 +30,6 @@
 		"exec": "$@",
 		"prepublishOnly": "npm run build"
 	},
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"devDependencies": {
 		"@ctx-core/array": "workspace:^23.0.0",
 		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.25",
