--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.1",
+	"version": "9.0.2",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -18,6 +18,7 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
+	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -30,12 +31,12 @@
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.1",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.26",
-		"@ctx-core/dom": "workspace:^11.0.1",
-		"@ctx-core/object": "workspace:^21.0.1",
-		"@ctx-core/uri": "workspace:^12.0.1",
-		"@ctx-core/uuid": "workspace:^8.0.1",
+		"@ctx-core/array": "workspace:^23.0.2",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.27",
+		"@ctx-core/dom": "workspace:^11.0.2",
+		"@ctx-core/object": "workspace:^21.0.2",
+		"@ctx-core/uri": "workspace:^12.0.2",
+		"@ctx-core/uuid": "workspace:^8.0.2",
 		"svelte": "3.38.3",
 		"typescript": "^4.3.5"
 	},
