--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.5",
+	"version": "9.0.6",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,7 +19,7 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"main": "./dist/index.js",
+	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
@@ -36,12 +36,12 @@
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.7",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.30",
-		"@ctx-core/dom": "workspace:^11.0.8",
-		"@ctx-core/object": "workspace:^21.0.6",
-		"@ctx-core/uri": "workspace:^12.0.5",
-		"@ctx-core/uuid": "workspace:^8.0.5",
+		"@ctx-core/array": "workspace:^23.0.8",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.31",
+		"@ctx-core/dom": "workspace:^11.0.9",
+		"@ctx-core/object": "workspace:^21.0.7",
+		"@ctx-core/uri": "workspace:^12.0.6",
+		"@ctx-core/uuid": "workspace:^8.0.6",
 		"svelte": "3.38.3",
 		"typescript": "^4.3.5"
 	},
