--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.6",
+	"version": "9.0.7",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -30,18 +30,18 @@
 		"build": "npm run clean && npm run copy-mjs && npm run copy-components && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
-		"copy-mjs": "cd dist && echo \"require = require('esm')(module)\nmodule.exports = require('./index.js')\" > index.cjs",
+		"copy-mjs": "cd dist && echo \"module.exports = (async () => import('./index.js'))()\" > index.cjs",
 		"copy-components": "cd src && find . | grep \\.svelte$ | awk '{print \"mkdir -p dirname \"$1\" && cp -f \"$1\" ../dist/\"$1}'",
 		"exec": "$@",
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.8",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.31",
-		"@ctx-core/dom": "workspace:^11.0.9",
-		"@ctx-core/object": "workspace:^21.0.7",
-		"@ctx-core/uri": "workspace:^12.0.6",
-		"@ctx-core/uuid": "workspace:^8.0.6",
+		"@ctx-core/array": "workspace:^23.0.9",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.32",
+		"@ctx-core/dom": "workspace:^11.0.10",
+		"@ctx-core/object": "workspace:^21.0.8",
+		"@ctx-core/uri": "workspace:^12.0.7",
+		"@ctx-core/uuid": "workspace:^8.0.7",
 		"svelte": "3.38.3",
 		"typescript": "^4.3.5"
 	},
