--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.67",
+	"version": "9.0.68",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,9 +19,9 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"main": "./dist/index.cjs",
+	"main": "./dist/index.js",
 	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"types": "./src/index.ts",
 	"exports": {
 		".": {
 			"require": "./dist/index.cjs",
@@ -30,29 +30,26 @@
 		"./package.json": "./package.json"
 	},
 	"scripts": {
-		"build": "npm run clean && npm run copy-mjs && npm run copy-components && npm run compile",
-		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
-		"compile": "./node_modules/.bin/tsc -b .",
-		"copy-mjs": "cd dist && echo \"module.exports = (async () => import('./index.js'))()\" > index.cjs",
-		"copy-components": "cd src && find . | grep \\.svelte$ | awk '{print \"mkdir -p dirname \"$1\" && cp -f \"$1\" ../dist/\"$1}'",
+		"build": "npm run compile",
+		"clean": "rm -rf dist",
+		"compile": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
 		"exec": "$@",
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.22",
+		"@ctx-core/array": "workspace:^23.0.23",
 		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.77",
-		"@ctx-core/dom": "workspace:^11.0.29",
-		"@ctx-core/object": "workspace:^21.0.21",
-		"@ctx-core/uri": "workspace:^12.0.15",
-		"@ctx-core/uuid": "workspace:^8.0.14",
+		"@ctx-core/dom": "workspace:^11.0.30",
+		"@ctx-core/object": "workspace:^21.0.22",
+		"@ctx-core/uri": "workspace:^12.0.16",
+		"@ctx-core/uuid": "workspace:^8.0.15",
+		"@swc/cli": "^0.1.51",
+		"@swc/core": "^1.2.107",
 		"svelte": "3.44.1",
 		"typescript": "^4.4.4"
 	},
 	"publishConfig": {
 		"access": "public",
 		"cache": "~/.npm"
-	},
-	"dependencies": {
-		"esm": "^3.2.25"
 	}
 }
