--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"clean": "rm -rf dist",
 		"compile": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
 		"exec": "$@",
-		"prepublishOnly": "npm run build"
+		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
 		"@ctx-core/array": "workspace:^23.0.23",
