--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.70",
+	"version": "9.0.72",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -37,16 +37,16 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.25",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.78",
-		"@ctx-core/dom": "workspace:^11.0.32",
-		"@ctx-core/object": "workspace:^21.0.24",
-		"@ctx-core/uri": "workspace:^12.0.18",
-		"@ctx-core/uuid": "workspace:^8.0.17",
-		"@swc/cli": "^0.1.51",
-		"@swc/core": "^1.2.110",
-		"svelte": "3.44.1",
-		"typescript": "^4.5.2"
+		"@ctx-core/array": "workspace:^23.0.27",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.80",
+		"@ctx-core/dom": "workspace:^11.0.34",
+		"@ctx-core/object": "workspace:^21.0.26",
+		"@ctx-core/uri": "workspace:^12.0.20",
+		"@ctx-core/uuid": "workspace:^8.0.19",
+		"@swc/cli": "^0.1.52",
+		"@swc/core": "^1.2.113",
+		"svelte": "3.44.2",
+		"typescript": "next"
 	},
 	"publishConfig": {
 		"access": "public",
