--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"types": "./src/index.ts",
 	"exports": {
 		".": {
+			"types": "./src/index.ts",
 			"import": "./dist/index.js"
 		},
 		"./package.json": "./package.json"
@@ -40,9 +40,14 @@
 		"@ctx-core/object": "workspace:^22.0.0",
 		"@ctx-core/uri": "workspace:^12.0.26",
 		"@ctx-core/uuid": "workspace:^8.0.24",
-		"@swc/cli": "^0.1.52",
-		"@swc/core": "^1.2.118",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@swc/cli": "^0.1.55",
+		"@swc/core": "^1.2.120",
 		"svelte": "3.44.2",
+		"svelte-preprocess": "^4.10.0",
+		"svelte2tsx": "^0.4.11",
+		"tslib": "^2.3.1",
 		"typescript": "next"
 	},
 	"publishConfig": {
