--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.79",
+	"version": "9.0.80",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -35,7 +35,7 @@
 	},
 	"devDependencies": {
 		"@ctx-core/array": "workspace:^23.0.33",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.85",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.86",
 		"@ctx-core/dom": "workspace:^11.0.40",
 		"@ctx-core/object": "workspace:^22.0.0",
 		"@ctx-core/uri": "workspace:^12.0.26",
@@ -44,7 +44,7 @@
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
 		"@swc/core": "^1.2.120",
-		"svelte": "3.44.2",
+		"svelte": "^3.44.3",
 		"svelte-preprocess": "^4.10.0",
 		"svelte2tsx": "^0.4.11",
 		"tslib": "^2.3.1",
