--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"scripts": {
 		"build": "npm run compile",
-		"clean": "rm -rf dist",
+		"clean": "rimraf dist",
 		"compile": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
 		"exec": "$@",
 		"prepublishOnly": "npm run clean && npm run build"
@@ -44,6 +44,7 @@
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
 		"@swc/core": "^1.2.120",
+		"rimraf": "^3.0.2",
 		"svelte": "^3.44.3",
 		"svelte-preprocess": "^4.10.0",
 		"svelte2tsx": "^0.4.11",
