--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.80",
+	"version": "9.0.81",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -34,12 +34,12 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.33",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.87",
-		"@ctx-core/dom": "workspace:^11.0.40",
-		"@ctx-core/object": "workspace:^22.0.0",
-		"@ctx-core/uri": "workspace:^12.0.26",
-		"@ctx-core/uuid": "workspace:^8.0.24",
+		"@ctx-core/array": "workspace:^23.0.34",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.88",
+		"@ctx-core/dom": "workspace:^11.0.41",
+		"@ctx-core/object": "workspace:^22.0.1",
+		"@ctx-core/uri": "workspace:^12.0.27",
+		"@ctx-core/uuid": "workspace:^8.0.25",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
@@ -54,5 +54,6 @@
 	"publishConfig": {
 		"access": "public",
 		"cache": "~/.npm"
-	}
+	},
+	"svelte": "./dist/index.js"
 }
