--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.81",
+	"version": "9.0.82",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -14,15 +14,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ctx-core/tradingview/issues"
+		"url": "https://github.com/ctx-core/tradingview.git"
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
 	"exports": {
 		".": {
-			"types": "./src/index.ts",
-			"import": "./dist/index.js"
+			"import": "./dist/index.js",
+			"types": "./src/index.ts"
 		},
 		"./package.json": "./package.json"
 	},
@@ -34,12 +34,12 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.34",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.88",
-		"@ctx-core/dom": "workspace:^11.0.41",
-		"@ctx-core/object": "workspace:^22.0.1",
-		"@ctx-core/uri": "workspace:^12.0.27",
-		"@ctx-core/uuid": "workspace:^8.0.25",
+		"@ctx-core/array": "workspace:^23.0.35",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.89",
+		"@ctx-core/dom": "workspace:^11.0.42",
+		"@ctx-core/object": "workspace:^22.0.2",
+		"@ctx-core/uri": "workspace:^12.0.28",
+		"@ctx-core/uuid": "workspace:^8.0.26",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
