--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.84",
+	"version": "9.0.85",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,29 +19,30 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
+	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts"
+			"import": "./dist/index.js"
 		},
 		"./package.json": "./package.json"
 	},
 	"scripts": {
 		"build": "npm run compile",
-		"clean": "rimraf dist",
+		"clean": "rimraf dist && npm run clean_tsbuildinfo",
+		"clean_tsbuildinfo": "rm -f tsconfig.tsbuildinfo && rm -f dist/**/*.d.ts",
 		"compile": "npm run compile_source && npm run compile_declaration",
 		"compile_source": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
-		"compile_declaration": "tsc src/index.ts --declaration --emitDeclarationOnly --declarationDir dist",
+		"compile_declaration": "npm run clean_tsbuildinfo && tsc --declaration --emitDeclarationOnly --declarationDir dist",
 		"exec": "$@",
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.37",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.91",
-		"@ctx-core/dom": "workspace:^11.0.44",
-		"@ctx-core/object": "workspace:^22.0.4",
-		"@ctx-core/uri": "workspace:^12.0.30",
-		"@ctx-core/uuid": "workspace:^8.0.28",
+		"@ctx-core/array": "workspace:^23.0.38",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.92",
+		"@ctx-core/dom": "workspace:^11.0.45",
+		"@ctx-core/object": "workspace:^22.0.5",
+		"@ctx-core/uri": "workspace:^12.0.31",
+		"@ctx-core/uuid": "workspace:^8.0.29",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
