--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.85",
+	"version": "9.0.86",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,7 +19,7 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"types": "./dist/index.d.ts",
+	"types": "./src/index.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
@@ -37,12 +37,12 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.38",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.92",
-		"@ctx-core/dom": "workspace:^11.0.45",
-		"@ctx-core/object": "workspace:^22.0.5",
-		"@ctx-core/uri": "workspace:^12.0.31",
-		"@ctx-core/uuid": "workspace:^8.0.29",
+		"@ctx-core/array": "workspace:^23.0.39",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.93",
+		"@ctx-core/dom": "workspace:^11.0.46",
+		"@ctx-core/object": "workspace:^22.0.6",
+		"@ctx-core/uri": "workspace:^12.0.32",
+		"@ctx-core/uuid": "workspace:^8.0.30",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
