--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.87",
+	"version": "9.0.88",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -19,7 +19,7 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"types": "./src/index.ts",
+	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
@@ -37,12 +37,12 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.0.40",
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.94",
-		"@ctx-core/dom": "workspace:^11.0.47",
-		"@ctx-core/object": "workspace:^22.0.7",
-		"@ctx-core/uri": "workspace:^12.0.33",
-		"@ctx-core/uuid": "workspace:^8.0.31",
+		"@ctx-core/array": "workspace:^23.0.41",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.95",
+		"@ctx-core/dom": "workspace:^11.0.48",
+		"@ctx-core/object": "workspace:^22.0.8",
+		"@ctx-core/uri": "workspace:^12.0.34",
+		"@ctx-core/uuid": "workspace:^8.0.32",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
