--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.91",
+	"version": "9.0.92",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -37,11 +37,11 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^23.1.3",
-		"@ctx-core/dom": "workspace:^11.1.4",
-		"@ctx-core/object": "workspace:^22.0.11",
-		"@ctx-core/uri": "workspace:^12.0.37",
-		"@ctx-core/uuid": "workspace:^8.0.35",
+		"@ctx-core/array": "workspace:^23.1.4",
+		"@ctx-core/dom": "workspace:^11.1.5",
+		"@ctx-core/object": "workspace:^22.0.12",
+		"@ctx-core/uri": "workspace:^12.0.38",
+		"@ctx-core/uuid": "workspace:^8.0.36",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
@@ -57,5 +57,6 @@
 		"access": "public",
 		"cache": "~/.npm"
 	},
-	"svelte": "./lib/index.js"
+	"svelte": "./lib/index.js",
+	"sideEffects": false
 }
