--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "workspace:^24.0.1",
-		"@ctx-core/dom": "workspace:^11.1.5",
-		"@ctx-core/object": "workspace:^22.0.13",
-		"@ctx-core/uri": "workspace:^12.0.38",
-		"@ctx-core/uuid": "workspace:^8.0.36",
+		"@ctx-core/array": "^24.0.1",
+		"@ctx-core/dom": "^11.1.5",
+		"@ctx-core/object": "^22.0.13",
+		"@ctx-core/uri": "^12.0.38",
+		"@ctx-core/uuid": "^8.0.36",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
