--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.0.93",
+	"version": "9.0.94",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -37,11 +37,11 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/array": "^24.0.1",
-		"@ctx-core/dom": "^11.1.5",
-		"@ctx-core/object": "^22.0.13",
-		"@ctx-core/uri": "^12.0.38",
-		"@ctx-core/uuid": "^8.0.36",
+		"@ctx-core/array": "workspace:*",
+		"@ctx-core/dom": "workspace:^11.1.6",
+		"@ctx-core/object": "workspace:*",
+		"@ctx-core/uri": "workspace:^12.0.39",
+		"@ctx-core/uuid": "workspace:^8.0.36",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
