--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	"devDependencies": {
 		"@ctx-core/array": "*",
 		"@ctx-core/dom": "^11.1.8",
-		"@ctx-core/object": "*",
+		"@ctx-core/object": "^22.1.2",
 		"@ctx-core/uri": "^12.0.39",
 		"@ctx-core/uuid": "^8.0.36",
 		"@sveltejs/adapter-auto": "next",
