--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.1.1",
+	"version": "9.1.2",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -39,7 +39,7 @@
 		"@ctx-core/dom": "workspace:^11.4.1",
 		"@ctx-core/object": "workspace:^24.1.4",
 		"@ctx-core/uri": "12.1.0",
-		"@ctx-core/uuid": "workspace:^8.0.41",
+		"@ctx-core/uuid": "8.1.0",
 		"svelte": "^3.55.1"
 	},
 	"devDependencies": {
