--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.1.2",
+	"version": "9.1.3",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -35,9 +35,9 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "workspace:^26.10.2",
-		"@ctx-core/dom": "workspace:^11.4.1",
-		"@ctx-core/object": "workspace:^24.1.4",
+		"@ctx-core/array": "26.11.0",
+		"@ctx-core/dom": "workspace:^11.4.2",
+		"@ctx-core/object": "workspace:^24.1.5",
 		"@ctx-core/uri": "12.1.0",
 		"@ctx-core/uuid": "8.1.0",
 		"svelte": "^3.55.1"
