--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.1.4",
+	"version": "9.1.5",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -36,7 +36,7 @@
 	},
 	"dependencies": {
 		"@ctx-core/array": "26.11.1",
-		"@ctx-core/dom": "workspace:^11.4.2",
+		"@ctx-core/dom": "11.4.3",
 		"@ctx-core/object": "workspace:^24.1.5",
 		"@ctx-core/uri": "12.1.1",
 		"@ctx-core/uuid": "8.1.0",
