--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.1.17",
+	"version": "9.1.18",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -35,10 +35,10 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "26.11.6",
-		"@ctx-core/dom": "11.4.11",
-		"@ctx-core/object": "workspace:^25.0.0",
-		"@ctx-core/uri": "12.1.5",
+		"@ctx-core/array": "26.11.7",
+		"@ctx-core/dom": "11.4.12",
+		"@ctx-core/object": "25.0.1",
+		"@ctx-core/uri": "12.1.6",
 		"@ctx-core/uuid": "8.1.0",
 		"svelte": "^3.55.1"
 	},
