--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "26.12.12",
-		"@ctx-core/dom": "14.1.12",
-		"@ctx-core/object": "27.4.4",
-		"@ctx-core/uri": "12.4.19",
-		"@ctx-core/uuid": "8.1.0",
+		"@ctx-core/array": "^26.12.25",
+		"@ctx-core/dom": "^14.1.12",
+		"@ctx-core/object": "^27.4.16",
+		"@ctx-core/uri": "^12.4.19",
+		"@ctx-core/uuid": "^8.1.0",
 		"svelte": "^3.58.0"
 	},
 	"devDependencies": {
